# rw-aiai

./: .gitignore  README.md  pyproject.toml
ansible/: ansible.cfg  inventory.yml
ansible/dev/: playbook.yml  vars.yml
ansible/enterprise/: playbook.yml  vars.yml
ansible/host/: playbook.yml  vars.yml
ansible/infra/: playbook.yml  vars.yml
ansible/roles/common/tasks/: main.yml
backup/: config.yml
docs/: ARCHITECTURE.md
etc/: sync-config.yml  vdrive-config.yml
etc/systemd/: vdrive-maintenance.service  vdrive-maintenance.timer  vdrive-manager.service  vdrive-sync-local.service  vdrive-sync-local.timer  vdrive-sync.service  vdrive-sync.timer
scripts/: prune.sh  snapshot.sh  vdrive-host-setup.sh  vdrive-manager.sh  vdrive-sync.sh
src/rw_aiai/: __init__.py  cli.py
src/rw_aiai/backup/: __init__.py  pipeline.py
src/rw_aiai/iac/: __init__.py
src/rw_aiai/supervisor/: __init__.py  agent.py
